--- a/.github/workflows/cppcheck.yml
+++ b/.github/workflows/cppcheck.yml
@@ -1,4 +1,4 @@
-name: Cppcheck
+name: C CI/CD with GoogleTest
 
 on:
   push:
@@ -9,15 +9,27 @@ on:
       - main
 
 jobs:
-  cppcheck:
+  build:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Install cppcheck
-      run: sudo apt-get install -y cppcheck
+    - name: Set up submodules
+      run: git submodule update --init --recursive
 
-    - name: Run cppcheck
-      run: cppcheck --enable=all --inconclusive --std=c99 --suppress=missingIncludeSystem src/*.c
+    - name: Install dependencies
+      run: sudo apt-get install -y cmake build-essential
+
+    - name: Build the application
+      run: make
+
+    - name: Run application
+      run: ./main
+
+    - name: Build tests
+      run: make test
+
+    - name: Run tests
+      run: ./test
